--- a/package.json
+++ b/package.json
@@ -64,7 +64,8 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-storybook": "^0.8.0",
     "postcss": "^8",
-    "prettier": "^3.3.2",
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.5",
     "storybook": "^8.2.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
