feat: Api Fetch

--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
-NEXT_PUBLIC_DOMAIN='https://localhost:8080'
-NEXT_PUBLIC_API_URL='https://localhost:8080'
-NEXT_PUBLIC_MSW='enable'
+NEXT_PUBLIC_DOMAIN='http://3.35.68.204'
+NEXT_PUBLIC_API_URL='http://3.35.68.204'
+# NEXT_PUBLIC_MSW='enable'
+
+NEXT_PUBLIC_SOCIAL_LOGIN_GITHUB='http://3.35.68.204/oauth2/authorization/github'
+NEXT_PUBLIC_SOCIAL_LOGIN_GOOGLE='http://ec2-3-35-68-204.ap-northeast-2.compute.amazonaws.com/oauth2/authorization/google'
+NEXT_PUBLIC_SOCIAL_LOGIN_KAKAO='http://3.35.68.204/oauth2/authorization/kakao'
